# github-autolabeler

./: Dockerfile  README.md  README.rst  action.yml  autolabels.yml  entrypoint.py  pyproject.toml  setup.py  test.txt
.github/workflows/: autolabeler.yml  autolabels-action-sync.yml  autolabels-sync.yml  ghcr-image-build-and-publish.yml
autolabeler/: actions.py  expr.py  labelers.py  main.py  manager.py  selectors.py  targets.py  utils.py
samples/: 101-custom-separator.yml  101-last-activity.yml  101-nested-prefix-labels.yml  101-prs.yml  101-showcase.yml  101-state-selector.yml  201-definitions.yml  201-regex-selectors-showcase.yml  201-selector-combos-onelinefile.yml  autolabels-showcase.yaml
